webapp #29: fix z-index ordering for floating glossary.

--- a/webapp/src/styles.sass
+++ b/webapp/src/styles.sass
@@ -880,7 +880,7 @@ header
   padding: 1em
   position: absolute
   width: 30em
-  z-index: 10
+  z-index: 20
 
   .term
     max-height: 99em
